--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
+  "engines": {
+	  "node": "v12.x"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
