--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "es5",
+  "tabWidth": 4,
+  "useTabs": false,
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
