--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.0",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
 }
