--- a/package.json
+++ b/package.json
@@ -1,59 +1,58 @@
 {
-  "name": "webshot",
-  "private": true,
-  "version": "1.0.0",
-  "description": "Webpage screenshot service",
-  "license": "MIT",
-  "engines": {
-    "node": "v16.x"
-  },
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start": "node dist/src/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "npm run build"
-  },
-  "dependencies": {
-    "@nestjs/common": "^8.4.7",
-    "@nestjs/core": "^8.4.7",
-    "@nestjs/platform-express": "^8.4.7",
-    "@nestjs/serve-static": "^2.2.2",
-    "@nestjs/swagger": "^5.2.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "puppeteer": "^14.4.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.5",
-    "swagger-ui-express": "^4.4.0"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^8.2.6",
-    "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.4.7",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.0.5",
-    "@types/node": "^18.0.0",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.0.5",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^28.0.5",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
-  }
+	"name": "webshot",
+	"private": true,
+	"version": "1.0.0",
+	"description": "Webpage screenshot service",
+	"license": "MIT",
+	"engines": {
+		"node": "v16.x"
+	},
+	"scripts": {
+		"build": "nest build",
+		"build:clean": "rimraf dist && npm run build",
+		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+		"start:dev": "nest start --watch",
+		"start:debug": "nest start --debug --watch",
+		"start": "node dist/main",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:cov": "jest --coverage",
+		"test:e2e": "jest --config ./test/jest-e2e.json"
+	},
+	"dependencies": {
+		"@nestjs/common": "^8.4.7",
+		"@nestjs/core": "^8.4.7",
+		"@nestjs/platform-express": "^8.4.7",
+		"@nestjs/serve-static": "^2.2.2",
+		"@nestjs/swagger": "^5.2.1",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.13.2",
+		"puppeteer": "^14.4.1",
+		"reflect-metadata": "^0.1.13",
+		"rxjs": "^7.5.5",
+		"swagger-ui-express": "^4.4.0"
+	},
+	"devDependencies": {
+		"@nestjs/cli": "^8.2.6",
+		"@nestjs/schematics": "^8.0.11",
+		"@nestjs/testing": "^8.4.7",
+		"@types/express": "^4.17.13",
+		"@types/jest": "^28.0.5",
+		"@types/node": "^18.0.0",
+		"@types/supertest": "^2.0.12",
+		"@typescript-eslint/eslint-plugin": "^5.28.0",
+		"@typescript-eslint/parser": "^5.28.0",
+		"eslint": "^8.18.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"jest": "^28.0.5",
+		"prettier": "^2.7.1",
+		"rimraf": "^3.0.2",
+		"supertest": "^6.1.3",
+		"ts-jest": "^28.0.5",
+		"ts-loader": "^9.3.0",
+		"ts-node": "^10.8.2",
+		"typescript": "^4.7.4"
+	}
 }
