--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"@nestjs/swagger": "^5.2.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
-		"puppeteer": "^14.4.1",
+        "puppeteer": "13.5.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.5.5",
 		"swagger-ui-express": "^4.4.0"
